src/objects/Check__c.object
<CustomObject>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Checks</relationshipLabel>
        <relationshipName>Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <label>Check Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Drawer__c</fullName>
        <label>Check Drawer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Checks</relationshipLabel>
        <relationshipName>Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uncleared</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Check</label>
    <nameField>
        <label>Check Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>